Rasterization gets command line args
Rasterizer now parses getopt(3) arguments and shows a more helpful help
page if arguments are incorrect.

--- a/font-generator/Makefile
+++ b/font-generator/Makefile
@@ -13,7 +13,7 @@ test: all
 	./font-rasterize
 
 fonts: all
-	./font-rasterize "VCR OSD Mono" 20 vcr-osd-mono-20.json
+	./font-rasterize --antialias=none --fontsize 20 "VCR OSD Mono" vcr-osd-mono-20.json
 	./json-to-c.py -f --filename-include-threshold -t 60 --create-pnm vcr-osd-mono-20.json
 
 font-rasterize: $(OBJS)
