Font rasterizer code generation
Font rasterizer now generates C/H files from the rasterized fonts that
can be directly imported into the device for flashing. Character sets
can also be chosen (previously, simply all files ended up in the FW
file).

--- a/font-generator/Makefile
+++ b/font-generator/Makefile
@@ -14,7 +14,9 @@ test: all
 
 fonts: all
 	./font-rasterize --antialias=none --fontsize 20 "VCR OSD Mono" vcr-osd-mono-20.json
-	./json-to-c.py -f --filename-include-threshold -t 60 --create-pnm vcr-osd-mono-20.json
+	./json-to-c.py -f -t 60 --create-pnm vcr-osd-mono-20.json
+	./font-rasterize --antialias=none --fontsize 30 "VCR OSD Mono" vcr-osd-mono-30.json
+	./json-to-c.py -c '0123456789.' -f -t 30 --create-text --text "123.456" --create-pnm vcr-osd-mono-30.json
 
 font-rasterize: $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $(OBJS) $(LDFLAGS)
