Refactoring of fsconnect code
Extracted the simconnect code in own module for isolation (thinking
about using this code to interface X-plane as well and can't have
simulator dependency all over the place).

--- a/fsx-plugin/Makefile
+++ b/fsx-plugin/Makefile
@@ -10,11 +10,11 @@ OBJDUMP := $(PREFIX)objdump
 AR := $(PREFIX)ar
 GDB := $(PREFIX)gdb
 
-CFLAGS := -std=c11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3 -g3
-CXXFLAGS := -std=c++11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3 -g3
+CFLAGS := -std=c11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3
+CXXFLAGS := -std=c++11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3
 LDFLAGS := -Lsdk -lSimConnect
 
-OBJS := fpconnect.o event-enum.o
+OBJS := fpconnect.o fsconnection.o simconnect.o simconnect-events.o
 
 all: $(TARGETS)
 
