--- a/fsx-plugin/fpconnect.cbp
+++ b/fsx-plugin/fpconnect.cbp
@@ -12,6 +12,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-g" />
 					<Add directory="sdk" />
 				</Compiler>
@@ -41,6 +42,11 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="fpconnect.cpp" />
+		<Unit filename="fsconnection.cpp" />
+		<Unit filename="simconnect-events.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="simconnect.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
