Datadefinition code generator
Now code is generated that has correct alignment. Also auto-generates
static assertions in the header file so it isn't possible for
misalignment to occur anymore.

--- a/fsx-plugin/Makefile
+++ b/fsx-plugin/Makefile
@@ -14,7 +14,7 @@ CFLAGS := -std=c11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=for
 CXXFLAGS := -std=c++11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3
 LDFLAGS := -Lsdk -lSimConnect
 
-OBJS := fpconnect.o fsconnection.o simconnect.o simconnect-events.o
+OBJS := fpconnect.o fsconnection.o simconnect.o simconnect-events.o simconnect-datadefs.o
 
 all: $(TARGETS)
 
