Included other simulation variables
New simulation variables included in code generation and in generic
model, but no conversion yet from SimConnect to generic model.

--- a/fsx-plugin/fpconnect.cbp
+++ b/fsx-plugin/fpconnect.cbp
@@ -43,6 +43,7 @@
 		</Unit>
 		<Unit filename="fpconnect.cpp" />
 		<Unit filename="fsconnection.cpp" />
+		<Unit filename="simconnect-datadefs.cpp" />
 		<Unit filename="simconnect-events.c">
 			<Option compilerVar="CC" />
 		</Unit>
