Slight fix to make DME work, threading support
Need to query "NAV HAS NAV" (to see if VOR is in range) because "NAV HAS
DME" only gives us if the VOR *could* theoretically supply DME, but not
if it is in range or not.

--- a/fsx-plugin/Makefile
+++ b/fsx-plugin/Makefile
@@ -10,9 +10,9 @@ OBJDUMP := $(PREFIX)objdump
 AR := $(PREFIX)ar
 GDB := $(PREFIX)gdb
 
-CFLAGS := -std=c11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3
-CXXFLAGS := -std=c++11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3
-LDFLAGS := -Lsdk -lSimConnect
+CFLAGS := -std=c11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3 -pthread
+CXXFLAGS := -std=c++11 -Isdk -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3 -pthread
+LDFLAGS := -Lsdk -lSimConnect -lpthread
 
 OBJS := fpconnect.o fsconnection.o simconnect.o simconnect-events.o simconnect-datadefs.o
 
