FPConnect for Windows gets an icon
Albeit an ugly one. But if we're already generating resources, we might
as well.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ firmware/cube/include-cmsis
 firmware/cube/stm32f4xx_hal_conf.h
 firmware/cube/usbd_conf.c
 firmware/cube/usbd_conf.h
+
+fsxplugin/fpconnect.exe
+fsxplugin/fpconnect.res
+
