Some refactoring and randomization of emulator
Refactored Makefile a bit and randomized more parts in the emulation
code.

--- a/fsx-plugin/Makefile
+++ b/fsx-plugin/Makefile
@@ -1,9 +1,12 @@
 .PHONY: all clean test
 
-#VARIANT := windows
+WINDOWS_TARGET := fpconnect.exe
+WINDOWS_OBJS := simconnect.o simconnect-events.o simconnect-datadefs.o fpconnect.res
+LINUX_TARGET := fpconnect
+LINUX_OBJS := emulator.o
 
 ifeq ($(VARIANT),windows)
-TARGET := fpconnect.exe
+TARGET := $(WINDOWS_TARGET)
 PREFIX := i686-w64-mingw32-
 CXX := $(PREFIX)g++
 CC := $(PREFIX)gcc
@@ -11,11 +14,11 @@ AR := $(PREFIX)ar
 GDB := $(PREFIX)gdb
 WINDRES := $(PREFIX)windres
 BUILDDIR := build/windows
-PLATFORM_CFLAGS := -Isdk -DVARIANT_WINDOWS
-PLATFORM_LDFLAGS := -Lsdk -lSimConnect -Lhidapi/windows/.libs -lhidapi
-PLATFORM_OBJS := simconnect.o simconnect-events.o simconnect-datadefs.o fpconnect.res
+PLATFORM_CFLAGS := -Isdk-simconnect -DVARIANT_WINDOWS
+PLATFORM_LDFLAGS := -Lsdk-simconnect -lSimConnect -Lhidapi/windows/.libs -lhidapi
+PLATFORM_OBJS := $(WINDOWS_OBJS)
 else ifeq ($(VARIANT),linux)
-TARGET := fpconnect
+TARGET := $(LINUX_TARGET)
 PREFIX :=
 CXX := $(PREFIX)g++
 CC := $(PREFIX)gcc
@@ -25,9 +28,9 @@ WINDRES := $(PREFIX)windres
 BUILDDIR := build/linux
 PLATFORM_CFLAGS := -DVARIANT_LINUX
 PLATFORM_LDFLAGS := -Lhidapi/libusb/.libs -lhidapi-libusb
-PLATFORM_OBJS := emulator.o
+PLATFORM_OBJS := $(LINUX_OBJS)
 else
-$(error The VARIANT variable needs to be either "linux" or "windows", not "$(VARIANT)")
+$(error The VARIANT environment variable needs to be either "linux" or "windows", not "$(VARIANT)")
 endif
 
 SHARED_CFLAGS := $(PLATFORM_CFLAGS) -Ihidapi/hidapi -Wall -Werror=implicit-function-declaration -Werror=format-extra-args -Werror=format -O3 -pthread -g
@@ -40,7 +43,9 @@ OBJS := fpconnect.o fsconnection.o fpconnection.o $(PLATFORM_OBJS)
 all: $(TARGET)
 
 clean:
-	rm -f $(OBJS) $(TARGET)
+	rm -f $(OBJS)
+	rm -f $(WINDOWS_TARGET) $(WINDOWS_OBJS)
+	rm -f $(LINUX_TARGET) $(LINUX_OBJS)
 
 test: all
 	LD_LIBRARY_PATH="`pwd`/hidapi/libusb/.libs" ./$(TARGET)
