--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ firmware/cube/stm32f4xx_hal_conf.h
 firmware/cube/usbd_conf.c
 firmware/cube/usbd_conf.h
 
-fsxplugin/fpconnect.exe
-fsxplugin/fpconnect.res
+fsx-plugin/fpconnect
+fsx-plugin/fpconnect.exe
+fsx-plugin/fpconnect.res
+fsx-plugin/build
+fsx-plugin/hidapi
+fsx-plugin/sdk-simconnect
 
