X-Plane 11 FSConnection "hello world"
Does nothing at all, but successfully installs into X-Plane 11 and
outputs a few messages.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ firmware/cube/usbd_conf.h
 fsx-plugin/fpconnect
 fsx-plugin/fpconnect.exe
 fsx-plugin/fpconnect.res
+fsx-plugin/fpconnect.so
 fsx-plugin/build
 fsx-plugin/hidapi
 fsx-plugin/sdk-simconnect
