--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+dist: trusty
 language: python
 python:
   - 3.5
 
-#before_install:
-#    - sudo apt-get install -y libhidapi-dev libhidapi-libusb0
-#    - sudo apt-get install -y g++-mingw-w64-i686 gcc-mingw-w64-i686
+before_install:
+    - sudo apt-get install -y libhidapi-dev libhidapi-libusb0
+    - sudo apt-get install -y g++-mingw-w64-i686 gcc-mingw-w64-i686
 
 cache:
     directories:
