Linker script removed from Makefile
It's not a dependency anymore, that method was superseded by the
bootstrapping script.

--- a/firmware/ext-st/Makefile
+++ b/firmware/ext-st/Makefile
@@ -9,7 +9,7 @@ CFLAGS += -I. -I$(LIBRARY_PATH)/Libraries/STM32F4xx_StdPeriph_Driver/inc/ -I${LI
 LIBRARY_SRCS := $(wildcard $(LIBRARY_PATH)/Libraries/STM32F4xx_StdPeriph_Driver/src/*.c)
 LIBRARY_OBJS := $(LIBRARY_SRCS:.c=.o)
 
-all: stdperiph.a init.o stm32f407.ld
+all: stdperiph.a init.o
 
 clean:
 	rm -f ${LIBRARY_OBJS}
