--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 before_install:
     - sudo apt-get install -y libhidapi-dev libhidapi-libusb0
     - sudo apt-get install -y g++-mingw-w64-i686 gcc-mingw-w64-i686
+    - sudo apt-get install -y python3-requests
 
 cache:
     directories:
