--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 dist: trusty
 language: python
 python:
-  - 3.5
+    - 3.5
+
+branches:
+    only:
+        - master
 
 before_install:
     - sudo apt-get install -y libhidapi-dev libhidapi-libusb0
