Create build/ subdirectory when building
This was previously only generated for the Windows variant
(bootstrapping libhid script) -- now it's generated before the
installation as well. Also fix a typo and name the devbuild.

--- a/fs-plugin/Makefile
+++ b/fs-plugin/Makefile
@@ -77,6 +77,7 @@ test: all
 	LD_LIBRARY_PATH="`pwd`/build/linux" ./$(TARGET)
 
 install:
+	mkdir -p $(BUILDDIR) >/dev/null 2>&1
 	cp $(TARGET) $(BUILDDIR)/$(VARIANT)_$(TARGET)
 	$(STRIP) -d $(BUILDDIR)/$(VARIANT)_$(TARGET)
 
