Surface tests now in testbed
Previously, this was part of the surface object and had to be compiled
manually. Now it's automatically tested.

--- a/firmware/tests/Makefile
+++ b/firmware/tests/Makefile
@@ -6,18 +6,20 @@ LDFLAGS :=
 TEST_COMMON_OBJS := testbed.o
 TEST_OBJS := \
 	test_vhf_frequency_conversion \
-	test_nav_frequency_conversion
+	test_nav_frequency_conversion \
+	test_surface
 
 all: $(TEST_COMMON_OBJS) $(TEST_OBJS)
 
 test_vhf_frequency_conversion: ../frequencies.o
 test_nav_frequency_conversion: ../frequencies.o
+test_surface: ../surface.o
 
 test: all
 	for testname in $(TEST_OBJS); do ./$$testname; done
 
 clean:
-	rm -f $(TEST_COMMON_OBJS) $(TEST_OBJS)
+	rm -f $(TEST_COMMON_OBJS) $(TEST_OBJS) ../*.o
 
 .c:
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $+ $(TEST_COMMON_OBJS)
