Rotary encoder tests and improved int comparison
Now also have an assert_int_eq() function which will dump LHS and RHS
values (similar to the str functions before). Use those in VHF/NAV
tests. Also include rotary encoder tests (and found and fixed a rotary
encoder bug as well).

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ firmware/tests/test_font
 firmware/tests/test_surface
 firmware/tests/test_vhf_frequency_conversion
 firmware/tests/test_nav_frequency_conversion
+firmware/tests/test_rotary
 
 en.stm32cubef4.zip
 firmware/cube/cube.a
