--- a/firmware/tests/Makefile
+++ b/firmware/tests/Makefile
@@ -9,7 +9,8 @@ TEST_OBJS := \
 	test_nav_frequency_conversion \
 	test_surface \
 	test_font \
-	test_rotary
+	test_rotary \
+	test_debounce
 
 all: $(TEST_COMMON_OBJS) $(TEST_OBJS)
 
@@ -18,6 +19,7 @@ test_nav_frequency_conversion: $(TEST_COMMON_OBJS) ../frequencies.o
 test_surface: $(TEST_COMMON_OBJS) ../surface.o helper_surface.o
 test_font: $(TEST_COMMON_OBJS) ../surface.o ../font.o ../vcr-osd-mono-20.o helper_surface.o
 test_rotary: $(TEST_COMMON_OBJS) ../rotary.o
+test_debounce: $(TEST_COMMON_OBJS) ../debounce.o
 
 test: all
 	rm -f tests.log
