Reset_Handler implemented stack painting
Paint all of RAM with 0xdeadbeef during very (!) early init. This allows
us to determine during runtime how much heap and stack we used.
Currently, around 5k of heap, aroung 0.5k of stack.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ firmware/ext-st/include
 firmware/ext-st/include-cmsis
 firmware/ext-st/include-cmsis-dev
 firmware/ext-st/stm32f407.ld
+firmware/ext-st/reset.s
 
 firmware/tests/tests.log
 firmware/tests/test_font
